--- a/sub-html-pages/developer-behind.html
+++ b/sub-html-pages/developer-behind.html
@@ -18,9 +18,9 @@
             <div class="container px-5 py-24 mx-auto">
                 <div class="flex flex-wrap -m-4">
                     <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
-                        <div class="h-full text-center">
+                        <div class="h-full text-center hover:text-indigo-700">
                             <img alt="asan"
-                                class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-blue-300 "
+                                class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-indigo-600 "
                                 src="/images/developers-behind/asan.jpg">
                             <p class="leading-relaxed">Most people make the mistake of thinking design is what it looks
                                 like. People think it's this veneer-that the
@@ -34,9 +34,9 @@
                         </div>
                     </div>
                     <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
-                        <div class="h-full text-center">
+                        <div class="h-full text-center  hover:text-indigo-700">
                             <img alt="vinoth"
-                                class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-blue-200 "
+                                class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-indigo-600 "
                                 src="/images/developers-behind/vinoth.jpg">
                             <p class="leading-relaxed">Good UX design means thinking like a user and providing a clear
                                 pathway to help the user achieve their goals when
@@ -49,9 +49,9 @@
                         </div>
                     </div>
                     <div class="lg:w-1/3 lg:mb-0 p-4">
-                        <div class="h-full text-center">
+                        <div class="h-full text-center  hover:text-indigo-700">
                             <img alt="Parvesh"
-                                class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-blue-200"
+                                class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-indigo-600"
                                 src="/images/developers-behind/parvesh.jpg">
                             <p class="leading-relaxed">Back end developers are responsible for creating and maintaining technology at the back end of a website (the server,
                             database and application). The attractive visuals created by designers, UX professionals and front end developers
